[package]
name = "ag_overlay_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
const-str = "0.7.0"
deadpool = { version = "0.12.3", features = ["managed", "rt_tokio_1"] }
dotenvy = "0.15.7"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
redis = { version = "0.32.5", features = ["json", "tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "macros", "signal", "time"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }

